fixed scrollbar bug when selecting a picture

--- a/phone/www/css/prototype.css
+++ b/phone/www/css/prototype.css
@@ -52,6 +52,10 @@ input:last-of-type {
     fill: none;
 }
 
+body .gallery .focus {
+    stroke-width: 7;
+}
+
 .gallery .selected {
     stroke: green;
     stroke-width: 5;
